# gtk4-stack-bug-reproducer

./: meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: POTFILES  meson.build
src/: gtk4_stack_bug_reproducer-window.c  gtk4_stack_bug_reproducer-window.h  gtk4_stack_bug_reproducer-window.ui  gtk4_stack_bug_reproducer.gresource.xml  main.c  meson.build
